# demo-fiql

./: Cargo.toml  README.md  config.yaml
data/: brands.json  products.json
resources/: tables.rs
schemas/: fiql.graphql
source/: index.html  package-lock.json  package.json  vite.config.ts
source/src/: App.tsx  index.css  yeti.css
source/src/hooks/: useAuth.ts
source/src/pages/: FiqlPage.tsx  Login.tsx
source/src/styles/: index.css
src/: lib.rs
